<resources>
    <string name="app_name">Abbhishek Calculator</string>
    <string name="abhishek_calclulator">Abhishek Calclulator</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter second Number</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multi">x</string>
    <string name="divide">/</string>
    <string name="result">Result</string>
</resources>