<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/abhishekCalculator"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/abhishek_calclulator"
       android:textSize="34sp"
        android:textStyle="bold"
      android:gravity="center"
     android:layout_marginTop="50dp"/>

   <EditText
       android:id="@+id/num1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/abhishekCalculator"
       android:layout_marginStart="50dp"
       android:layout_marginTop="62dp"
       android:layout_marginEnd="50dp"
       android:hint="@string/enter_first_number"
       android:inputType="number"
       android:minHeight="48dp"/>

   <EditText
       android:id="@+id/num2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/num1"
       android:layout_marginStart="50dp"
       android:layout_marginTop="36dp"
       android:layout_marginEnd="50dp"
       android:hint="@string/enter_second_number"
       android:inputType="number"
       android:minHeight="48dp"/>

   <Button
       android:id="@+id/button01"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/num2"
       android:layout_marginTop="50dp"
       android:layout_marginStart="90dp"
       android:text="@string/add"
       android:textSize="20sp"
       android:textStyle="bold"
       />
   <Button
       android:id="@+id/button02"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/num2"
       android:layout_marginTop="50dp"
       android:layout_marginEnd="90dp"
       android:layout_alignParentEnd="true"
       android:text="@string/subtract"
       android:textSize="20sp"
       android:textStyle="bold"
       />
   <Button
       android:id="@+id/button03"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/button01"
       android:layout_marginTop="50dp"
       android:layout_marginStart="90dp"
       android:text="@string/multi"
       android:textSize="20sp"
       android:textStyle="bold"
       />

   <Button
       android:id="@+id/button04"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentEnd="true"
       android:layout_below="@+id/button02"
       android:layout_marginEnd="90dp"
       android:layout_marginTop="50dp"
       android:text="@string/divide"
       android:textSize="20sp"
       android:textStyle="bold" />
</RelativeLayout>
